--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,8 +5,6 @@
 	<title>React Boilerplate</title>
 </head>
 <body>
-	<div id="root">
-		<h1>Welcome to this React Boilerplate!</h1>
-	</div>
+	<div id="root"></div>
 </body>
 </html>
